objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Architectural_Workshop_Margin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Architectural Workshop Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Architectural Workshop Margin)</relationshipLabel>
        <relationshipName>AW_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Reg_Margin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Reg Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Deal Reg Margin)</relationshipLabel>
        <relationshipName>DR_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POV_Margin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POV Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (POV Margin)</relationshipLabel>
        <relationshipName>POV_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Margin_Adjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Margin Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Partner_Program__c</fullName>
        <label>Partner Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>